backend connection kinda works

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
 		<style>
 			body { margin: 0; }
 		</style>
+		 <link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<div class="loading center-div" id="loadingScreen"></div>
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
