--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 	</head>
 	<body>
 		<div class="loading center-div" id="loadingScreen"></div>
+		
 		<script type="module" src="/main.js"></script>
+		<div id="info"></div>
 	</body>
 </html>
