refactor, still need to figure out host

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <div class="loading center-div" id="loadingScreen"></div>
 <div id="info"></div>
 
-<script type="module" src="/js/main.js"></script>
+<script type="module" src="./public/main.js"></script>
 </body>
 </html>
