--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="startButton">Start</button>
-    <canvas id="canvas"></canvas>
+    <canvas id="backgroundCanvas"></canvas>
+    <div id="chatContainer">
+    </div>
     <script src="index.js" type="module"></script>
 </body>
 </html>
