did the frontend

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
     <title>Rezep</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <canvas id="backgroundCanvas"></canvas>
-    <div id="chatContainer">
+<body style="background-color:black;">
+    <div id="containerchatcontainer">
+
     </div>
+    <canvas id="thecan"></canvas>
     <script src="index.js" type="module"></script>
 </body>
 </html>
