--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
     <div id="containerchatcontainer">
 
     </div>
+<!-- Menu Container -->
+<div id="menutag">
+
+  </div>
     <canvas id="thecan"></canvas>
     <script src="index.js" type="module"></script>
 </body>
