--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <title>Rezep</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color:black;">
+<body id="body" style="background-color:black;">
+<div id="playbody">
     <div id="containerchatcontainer">
 
     </div>
@@ -14,6 +15,7 @@
 
   </div>
     <canvas id="thecan"></canvas>
+</div>
     <script src="index.js" type="module"></script>
 </body>
 </html>
