--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
   </div>
     <canvas id="thecan"></canvas>
 </div>
-    <script src="index.js" type="module"></script>
+    <script src="bundle.js" type="module"></script>
 </body>
 </html>
