--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
 <div id="menutag">
 
   </div>
+    <div id="confirmCredentaials">
+
+    </div>
     <canvas id="thecan"></canvas>
 </div>
     <script src="bundle.js" type="module"></script>
