--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
 
     </div>
     <canvas id="thecan"></canvas>
+    <div id="bringmehomemygoodoldfriend" class="overlay">
+        <div class="cool-rectangle">
+            <span class="console-text">HerbertAI</span>
+        </div>
+    </div>
 </div>
     <script src="bundle.js" type="module"></script>
 </body>
